Revert "Solve a bug on IE7 and do some advanced changes on image loading.

--- a/imagegallery.css
+++ b/imagegallery.css
@@ -1,13 +1,15 @@
 .imageGallery{
 	position:relative;
-	margin:200px auto;
+	float:left;
 	padding:10px 25px;
 	width:630px;
 	height:100px;
 	overflow:hidden;
 }
 .imageGallery .container{
-	float:left;
+	position:absolute;
+	top:10px;
+	left:25px;
 	width:9999px;
 }
 .imageGallery .container img{
@@ -23,7 +25,7 @@
 	position:absolute;
 	top:0;
 	width:25px;
-	height:100%;
+	height:120px;
 	background-color:rgb(255, 255, 255);
 }
 .imageGallery .btn.btnPrev{
@@ -42,7 +44,7 @@
 }
 .imageGallery .btn .fg{
 	float:left;
-	margin-top:-77px;
+	margin-top:-82px;
 	width:0;
 	height:0;
 	border-top:12px solid transparent;
@@ -50,9 +52,9 @@
 	cursor:pointer;
 }
 .imageGallery .btn .bg.prev{
-	margin-top:50px;
+	margin-top:45px;
 	margin-right:10px;
-	margin-bottom:50px;
+	margin-bottom:55px;
 	border-right:15px solid rgb(55, 141, 233);
 }
 .imageGallery .btn .fg.prev{
@@ -61,8 +63,8 @@
 	border-right:12px solid rgb(255, 255, 255);
 }
 .imageGallery .btn .bg.next{
-	margin-top:50px;
-	margin-bottom:50px;
+	margin-top:45px;
+	margin-bottom:55px;
 	margin-left:10px;
 	border-left:15px solid rgb(55, 141, 233);
 }
@@ -92,8 +94,9 @@
 	opacity:.7;
 	filter:alpha(opacity=70);
 }
-.showBox .showImage{
+.showBox img{
 	position:absolute;
 	top:50%;
 	left:50%;
+	display:none;
 }
